--- a/src/main/resources/templates/WebQuanLy/xuat-xu.html
+++ b/src/main/resources/templates/WebQuanLy/xuat-xu.html
@@ -128,7 +128,7 @@
             </div>
         </div>
     </div>
-
+</div>
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script th:src="@{/js/sidebar.js}" defer></script>
