--- a/src/main/resources/templates/WebQuanLy/san-pham-list-form.html
+++ b/src/main/resources/templates/WebQuanLy/san-pham-list-form.html
@@ -714,7 +714,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <a th:href="@{/acvstore/chi-tiet-san-pham/add}" class="btn btn-primary w-100 d-flex align-items-center justify-content-center gap-2" style="height: 58px;">
+                            <a th:href="@{/acvstore/chi-tiet-san-pham/add}" class="btn btn-primary w-100 d-flex align-items-center justify-content-center gap-2" style="height: 58px; margin-bottom: 6px;">
                                 <i class="fas fa-plus"></i>
                                 <span class="fw-semibold">Thêm sản phẩm mới</span>
                             </a>
