--- a/src/main/resources/templates/WebQuanLy/hoa-don.html
+++ b/src/main/resources/templates/WebQuanLy/hoa-don.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -28,7 +27,7 @@
       --gray-600: #4b5563;
       --gray-700: #374151;
       --gray-800: #1f2937;
-      --gray-900: #111827;
+      --gray-900: #153054; /* Đổi từ #111827 thành #153054 (xanh than) */
     }
 
     * {
@@ -363,15 +362,15 @@
     }
 
     .pagination a:hover {
-      background: #000000;
+      background: var(--gray-900);
       color: #ffffff;
-      border-color: #000000;
+      border-color: var(--gray-900);
     }
 
     .pagination .active {
-      background: #000000;
+      background: var(--gray-900);
       color: #fff;
-      border-color: #000000;
+      border-color: var(--gray-900);
     }
 
     .pagination .disabled {
@@ -704,7 +703,6 @@
           <div id="paginationInstore" class="pagination"></div>
         </div>
       </div>
-
 
       <div class="tab-pane fade" id="online" role="tabpanel" aria-labelledby="online-tab">
         <div class="search-bar">
